<resources>
    <string name="app_name">Store</string>
    <string name="store_front">Store-Front</string>
    <string name="back_end">Back-End</string>
    <string name="price">Цена</string>
    <string name="amount">Количество</string>
    <string name="button_buy">Купить</string>
    <string name="product_name">Название</string>
    <string name="forward">Forward</string>
    <string name="add">add</string>
    <string name="subtract">subtract</string>
    <string name="enter_number">Enter number</string>
    <string name="add_menu">Add</string>
    <string name="save_menu">Save</string>
</resources>