<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".ui.fragments.edit.ProductEditFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/productDetail__name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/productDetail__price"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">
<!--        app:errorEnabled="@{searchModel.error}"-->
<!--        android:error_text="@{mainModel.errorText}"-->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/productDetail__editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name"
            android:textCursorDrawable="@null"
            android:imeOptions="actionNext"
            android:inputType="text"
            />
<!--            android:text="@={searchModel.query}"-->
<!--            app:setOnEditorActionListener="@{searchModel::onEditorActionListener}"-->
<!--            app:addTextChangedListener="@{searchModel.textChangeListener}"-->
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/productDetail__price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/productDetail__amount"
        app:layout_constraintTop_toBottomOf="@id/productDetail__name">
        <!--        app:errorEnabled="@{searchModel.error}"-->
        <!--        android:error_text="@{mainModel.errorText}"-->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/productDetail__editPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:textCursorDrawable="@null"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            />
        <!--            android:text="@={searchModel.query}"-->
        <!--            app:setOnEditorActionListener="@{searchModel::onEditorActionListener}"-->
        <!--            app:addTextChangedListener="@{searchModel.textChangeListener}"-->
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/productDetail__amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productDetail__price">
        <!--        app:errorEnabled="@{searchModel.error}"-->
        <!--        android:error_text="@{mainModel.errorText}"-->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/productDetail__editAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:textCursorDrawable="@null"
            android:imeOptions="actionDone"
            android:inputType="number"
            />
        <!--            android:text="@={searchModel.query}"-->
        <!--            app:setOnEditorActionListener="@{searchModel::onEditorActionListener}"-->
        <!--            app:addTextChangedListener="@{searchModel.textChangeListener}"-->
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>