<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemStoreFront__layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/itemStoreFront__guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="9dp" />

    <ProgressBar
        android:id="@+id/itemStoreFront__progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toTopOf="@+id/itemStoreFront__guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemStoreFront__progress"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:id="@+id/itemStoreFront__name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TitleText"
            app:layout_constraintBottom_toTopOf="@id/itemStoreFront__price"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread"
            tools:text="Lenovo G580" />

        <TextView
            android:id="@+id/itemStoreFront__price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            style="@style/NormalText"
            app:layout_constraintBottom_toTopOf="@id/itemStoreFront__amount"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemStoreFront__name" />

        <TextView
            android:id="@+id/itemStoreFront__value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalText"
            app:layout_constraintBaseline_toBaselineOf="@id/itemStoreFront__price"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="8922 руб." />

        <TextView
            android:id="@+id/itemStoreFront__amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            style="@style/NormalText"
            app:layout_constraintBottom_toTopOf="@id/itemStoreFront__buttonBuy"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemStoreFront__price" />

        <TextView
            android:id="@+id/itemStoreFront__pcs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalText"
            app:layout_constraintBaseline_toBaselineOf="@id/itemStoreFront__amount"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="1 шт." />

        <Button
            android:id="@+id/itemStoreFront__buttonBuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="48dp"
            android:paddingRight="48dp"
            android:text="@string/button_buy"
            android:theme="@style/AppTheme.Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemStoreFront__amount" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>